# sales-api

./: .gitignore  README.md  pyproject.toml
src/create_api/: sales_api.py  sales_data.json
tests/: test_sales_api.py
